opam-version: "2.0"
maintainer:   "thomas@gazagnaire.org"
authors:      ["Thomas Gazagnaire"]
license:      "ISC"
homepage:     "https://github.com/mirage/irmin"
bug-reports:  "https://github.com/mirage/irmin/issues"
dev-repo:     "git+https://github.com/mirage/irmin.git"
doc:          "https://mirage.github.io/irmin/"

build: [
 ["dune" "subst"] {dev}
 ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "dune"         {>= "2.7.0"}
  "irmin-pack"   {= version}
  "irmin-layers" {= version}
  "irmin-test"   {= version}
  "cmdliner"
  "logs"
  "lwt"
  "ppx_deriving_yojson"
  "yojson"
  "memtrace"
  "repr"         {>= "0.2.0"}
  "ppx_repr"
  "re"           {>= "1.9.0"}
  "fmt"
]

pin-depends: [
  [ "dataset.dev" "git+https://github.com/icristescu/dataset#3874b30cf856645726642781a99156ed4494610c" ]
]

synopsis: "Irmin benchmarking suite"
description: """
`irmin-bench` provides access to the Irmin suite for benchmarking storage backend
implementations.
"""
