opam-version: "2.0"
maintainer:   "thomas@gazagnaire.org"
authors:      ["Thomas Gazagnaire"]
license:      "ISC"
homepage:     "https://github.com/mirage/irmin"
bug-reports:  "https://github.com/mirage/irmin/issues"
dev-repo:     "git+https://github.com/mirage/irmin.git"
doc:          "https://mirage.github.io/irmin/"

build: [
 ["dune" "subst"] {dev}
 ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "dune"         {>= "3.5.0"}
  "irmin-pack"   {= version}
  "irmin-test"   {= version}
  "irmin-tezos"  {= version}
  "cmdliner"
  "logs"
  "lwt"          {>= "5.3.0"}
  "repr"         {>= "0.3.0"}
  "ppx_repr"
  "re"           {>= "1.9.0"}
  "fmt"
  "uuidm"
  "progress"     {>="0.2.1"}
  "fpath"        {with-test}
  "bentov"
  "mtime"        {>= "2.0.0"}
  "ppx_deriving"
  "alcotest"     {with-test}
  "rusage"
  "uutf"
  "uucp"
  "printbox"     {>= "0.6"}
  "printbox-text"
]

available: [
   # Disabled on 32-bit platforms due to an overly-large int literal in the source
   arch != "arm32" & arch != "x86_32"
]

synopsis: "Irmin benchmarking suite"
description: """
`irmin-bench` provides access to the Irmin suite for benchmarking storage backend
implementations.
"""
