opam-version: "2.0"
maintainer:   "thomas@gazagnaire.org"
authors:      ["Mounir Nasr Allah" "Thomas Gazagnaire"]
license:      "ISC"
homepage:     "https://github.com/mirage/irmin"
bug-reports:  "https://github.com/mirage/irmin/issues"
dev-repo:     "git+https://github.com/mirage/irmin.git"

build: [
 ["dune" "subst"] {pinned}
 ["dune" "build" "-p" name "-j" jobs]
 ["dune" "runtest" "-p" name] {with-test}
]

depends: [
  "ocaml"      {>= "4.02.3"}
  "dune"       {>= "1.8.0"}
  "irmin"      {>= "2.0.0"}
  "lwt"
  "irmin-mem"  {with-test & >= "2.0.0"}
  "irmin-test" {with-test & >= "2.0.0"}
]

synopsis: "Irmin backend which allow to store values into chunks"
