opam-version: "2.0"
maintainer:   "Tarides <contact@tarides.com>"
authors:      ["Tarides"]
license:      "ISC"
homepage:     "https://github.com/mirage/irmin"
bug-reports:  "https://github.com/mirage/irmin/issues"
dev-repo:     "git+https://github.com/mirage/irmin.git"
doc:          "https://mirage.github.io/irmin/"

build: [
 ["dune" "subst"] {dev}
 ["dune" "build" "-p" name "-j" jobs]
 ["dune" "runtest" "-p" name "-j" jobs] {with-test & os != "macos"}
]

available: arch != "arm32" & arch != "x86_32"

depends: [
  "ocaml"         {>= "5.1.0"}
  "dune"          {>= "3.5.0"}
  "irmin"         {= version}
  "irmin-git"     {= version}
  "irmin-fs"      {= version}
  "irmin-pack"    {= version}
  "irmin-graphql" {= version}
  "irmin-tezos"   {= version}
  "irmin-server"  {= version}
  "irmin-watcher" {= "dev"}
  "git-unix"      {>= "3.7.0"}
  "digestif"      {>= "0.9.0"}
  "yaml"          {>= "3.0.0"}
  "astring"
  "astring"
  "cohttp"
  "cohttp-lwt"
  "cohttp-lwt-unix"
  "conduit"
  "conduit-lwt"
  "conduit-lwt-unix" {>= "6.0.0"}
  "websocket-lwt-unix"
  "ppx_blob"      {>= "0.7.2"}
  "logs"
  "uri"
  "cmdliner"      {>= "1.3.0"}
  "cohttp-lwt-unix"
  "fmt"
  "git"           {>= "3.7.0"}
  "happy-eyeballs-lwt"
  "eio_main"      {>= "1.0"}
  "lwt_eio"       {>= "0.5"}
  "lwt"           {>= "5.3.0"}
  "irmin-test"    {with-test & = version}
  "alcotest"      {with-test}
  "mdx" {>= "2.0.0" & with-test}
  "mirage-mtime" {with-test}
  "mirage-ptime" {with-test}
  "mirage-crypto-rng" {with-test & >= "2.0.0"}
]

pin-depends: [
  [ "irmin-watcher.dev" "git+https://github.com/patricoferris/irmin-watcher#d0e92b4ba5631b5f4dc0f3c00d97e79542dba45d" ]
]

pin-depends: [
  [ "irmin-watcher.dev" "git+https://github.com/patricoferris/irmin-watcher#d0e92b4ba5631b5f4dc0f3c00d97e79542dba45d" ]
]

synopsis: "CLI for Irmin"
description: """
A simple CLI tool (called `irmin`) to manipulate and inspect Irmin stores.
"""
x-maintenance-intent: [ "(latest)" ]
