opam-version: "2.0"
synopsis: "A client for irmin-server"
maintainer: "Zach Shipko <zachshipko@gmail.com>"
authors: "Zach Shipko <zachshipko@gmail.com>"
license: "ISC"
homepage: "https://github.com/mirage/irmin"
doc: "https://irmin.org"
dev-repo: "git+ssh://github.com/mirage/irmin"
bug-reports: "https://github.com/mirage/irmin/issues"
depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "3.5.0"}
  "irmin-server" {= version}
  "irmin-cli" {= version}
  "ipaddr"
  "websocket-lwt-unix"
  "conduit-lwt-unix" {>= "6.0.0"}
  "lwt-dllist"
  "js_of_ocaml-lwt"
  "brr" {>= "0.0.4"}
  "fmt" {>= "0.9.0"}
  "logs" {>= "0.7.0"}
  "lwt" {>= "5.7.0"}
  "irmin-test" {= version & with-test}
  "alcotest-lwt" {with-test & >= "1.8.0"}
  "irmin-watcher" {= "dev" & with-test}
  "mirage-crypto-rng" {with-test & >= "2.0.0"}
]
pin-depends: [
  [ "irmin-watcher.dev" "git+https://github.com/patricoferris/irmin-watcher#d0e92b4ba5631b5f4dc0f3c00d97e79542dba45d" ]
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name] {with-test}
]
x-maintenance-intent: [ "(latest)" ]
