opam-version: "2.0"
synopsis: "A client for irmin-server"
maintainer: "Zach Shipko <zachshipko@gmail.com>"
authors: "Zach Shipko <zachshipko@gmail.com>"
license: "ISC"
homepage: "https://github.com/mirage/irmin"
doc: "https://irmin.org"
dev-repo: "git+ssh://github.com/mirage/irmin"
bug-reports: "https://github.com/mirage/irmin/issues"
depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "2.9.0"}
  "irmin-server" {= version}
  "irmin-cli" {= version}
  "ipaddr"
  "websocket-lwt-unix"
  "conduit-lwt-unix" {>= "6.0.0"}
  "lwt-dllist"
  "js_of_ocaml-lwt"
  "brr" {>= "0.0.4"}
  "fmt" {>= "0.9.0"}
  "logs" {>= "0.7.0"}
  "lwt" {>= "5.7.0"}
  "irmin-test" {= version & with-test}
  "alcotest-lwt" {with-test & >= "1.8.0"}
  "irmin-watcher" {with-test & >= "0.5.0"}
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name] {with-test}
]
