opam-version: "2.0"
synopsis: "A client for irmin-server"
maintainer: "Zach Shipko <zachshipko@gmail.com>"
authors: "Zach Shipko <zachshipko@gmail.com>"
license: "ISC"
homepage: "https://github.com/mirage/irmin"
doc: "https://irmin.org"
dev-repo: "git+ssh://github.com/mirage/irmin"
bug-reports: "https://github.com/mirage/irmin/issues"
depends: [
  "ocaml" {>= "5.1.0"}
  "dune" {>= "3.5.0"}
  "irmin-server" {= version}
  "irmin-cli" {= version}
  "ipaddr"
  "websocket-lwt-unix"
  "conduit-lwt-unix" {>= "6.0.0"}
  "lwt-dllist"
  "js_of_ocaml-lwt"
  "brr" {>= "0.0.4"}
  "fmt" {>= "0.9.0"}
  "logs" {>= "0.7.0"}
  "lwt" {>= "5.7.0"}
  "irmin-test" {= version & with-test}
  "irmin-watcher" {= "dev" & with-test}
]
pin-depends: [
  [ "irmin-watcher.dev" "git+https://github.com/clecat/irmin-watcher#834fc4903209b1516b010cbc7e134ebe115299c9" ]
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name] {with-test}
]
