opam-version: "2.0"
maintainer:   "thomas@gazagnaire.org"
authors:      ["Thomas Gazagnaire" "Thomas Leonard"]
license:      "ISC"
homepage:     "https://github.com/mirage/irmin"
bug-reports:  "https://github.com/mirage/irmin/issues"
dev-repo:     "git+https://github.com/mirage/irmin.git"
doc:          "https://mirage.github.io/irmin/"

build: [
 ["dune" "subst"] {dev}
 ["dune" "build" "-p" name "-j" jobs]
 ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

depends: [
  "ocaml"      {>= "4.03.0"}
  "dune"       {>= "2.7.0"}
  "irmin"      {= version}
  "astring"
  "logs"
  "lwt"        {>= "5.3.0"}
  "irmin-test" {with-test & = version}
  "alcotest"   {with-test}
]

synopsis: "Generic file-system backend for Irmin"
