opam-version: "2.0"
maintainer:   "thomas@gazagnaire.org"
authors:      ["Thomas Gazagnaire" "Thomas Leonard"]
license:      "ISC"
homepage:     "https://github.com/mirage/irmin"
bug-reports:  "https://github.com/mirage/irmin/issues"
dev-repo:     "git+https://github.com/mirage/irmin.git"
doc:          "https://mirage.github.io/irmin/"

build: [
 ["dune" "subst"] {dev}
 ["dune" "build" "-p" name "-j" jobs]
 ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

depends: [
  "ocaml"      {>= "4.03.0"}
  "dune"       {>= "3.5.0"}
  "irmin"      {= version}
  "astring"
  "logs"
  "eio"        {>= "0.15"}
  "lwt"        {>= "5.3.0"}
  "alcotest"   {with-test}
  "irmin-test" {with-test & = version}
  "irmin-watcher" {with-test & = "dev"}
]

pin-depends: [
  [ "irmin-watcher.dev" "git+https://github.com/patricoferris/irmin-watcher#d0e92b4ba5631b5f4dc0f3c00d97e79542dba45d" ]
]

synopsis: "Generic file-system backend for Irmin"
