opam-version: "2.0"
maintainer:   "thomas@gazagnaire.org"
authors:      ["Thomas Gazagnaire" "Thomas Leonard"]
license:      "ISC"
homepage:     "https://github.com/mirage/irmin"
bug-reports:  "https://github.com/mirage/irmin/issues"
dev-repo:     "git+https://github.com/mirage/irmin.git"
doc:          "https://mirage.github.io/irmin/"

build: [
 ["dune" "subst"] {dev}
 ["dune" "build" "-p" name "-j" jobs]
 ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

depends: [
  "ocaml"      {>= "4.02.3"}
  "dune"       {>= "2.7.0"}
  "irmin"      {= version}
  "ppx_irmin"  {= version}
  "git"        {>= "3.4.0"}
  "digestif"   {>= "0.9.0"}
  "cstruct"
  "fmt"
  "astring"
  "fpath"
  "logs"
  "lwt"        {>= "5.3.0"}
  "uri"
  "git-cohttp-unix" {with-test}
  "irmin-test" {with-test & = version}
  "git-unix"   {with-test}
  "mtime"      {with-test & >= "1.0.0"}
  "alcotest"   {with-test}
]

synopsis: "Git backend for Irmin"
description: """
`Irmin_git` expose a bi-directional bridge between Git repositories and
Irmin stores.
"""
