opam-version: "2.0"
maintainer:   "thomas@gazagnaire.org"
authors:      ["Thomas Gazagnaire" "Thomas Leonard"]
license:      "ISC"
homepage:     "https://github.com/mirage/irmin"
bug-reports:  "https://github.com/mirage/irmin/issues"
dev-repo:     "git+https://github.com/mirage/irmin.git"
doc:          "https://mirage.github.io/irmin/"

build: [
 ["dune" "subst"] {dev}
 ["dune" "build" "-p" name "-j" jobs]
 # Tests disabled on 32-bit platforms as the Dune build fails in CI:
 ["dune" "runtest" "-p" name "-j" jobs] {with-test & arch != "arm32" & arch != "x86_32"}
]

depends: [
  "ocaml"      {>= "4.02.3"}
  "dune"       {>= "3.5.0"}
  "irmin"      {= version}
  "ppx_irmin"  {= version}
  "git"        {>= "3.14.0"}
  "git-unix"   {>= "3.14.0"}
  "digestif"   {>= "0.9.0"}
  "cstruct"
  "fmt"
  "astring"
  "cohttp-lwt-unix"
  "fpath"
  "logs"
  "lwt"        {>= "5.3.0"}
  "lwt_eio"    {>= "0.5"}
  "uri"
  "mimic"
  "irmin-test" {with-test & = version}
  "mtime"      {with-test & >= "2.0.0"}
  "alcotest"   {with-test}
  "irmin-watcher" {= "dev"}
]

pin-depends: [
  [ "irmin-watcher.dev" "git+https://github.com/patricoferris/irmin-watcher#d0e92b4ba5631b5f4dc0f3c00d97e79542dba45d" ]
]

synopsis: "Git backend for Irmin"
description: """
`Irmin_git` expose a bi-directional bridge between Git repositories and
Irmin stores.
"""
