opam-version: "2.0"
maintainer:   "Andreas Garnaes <andreas.garnaes@gmail.com>"
authors:      "Andreas Garnaes <andreas.garnaes@gmail.com>"
license:      "ISC"
homepage:     "https://github.com/mirage/irmin"
bug-reports:  "https://github.com/mirage/irmin/issues"
dev-repo:     "git+https://github.com/mirage/irmin.git"
doc:          "https://mirage.github.io/irmin/"

build: [
 ["dune" "subst"] {pinned}
 ["dune" "build" "-p" name "-j" jobs]
 ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

depends: [
  "ocaml"   {>= "4.03.0"}
  "dune"    {>= "1.8.0"}
  "irmin"   {>= "2.2.0"}
  "graphql" {>= "0.13.0"}
  "graphql-lwt" {>= "0.13.0"}
  "graphql-cohttp" {>= "0.13.0"}
  "cohttp-lwt"
  "graphql_parser" {>= "0.13.0"}
  "alcotest-lwt" {>= "1.1.0" & with-test}
  "yojson" {with-test}
  "irmin-mem" {with-test}
  "cohttp-lwt-unix" {with-test}
]


synopsis: "GraphQL server for Irmin"
