opam-version: "2.0"
maintainer:   "Andreas Garnaes <andreas.garnaes@gmail.com>"
authors:      "Andreas Garnaes <andreas.garnaes@gmail.com>"
license:      "ISC"
homepage:     "https://github.com/mirage/irmin"
bug-reports:  "https://github.com/mirage/irmin/issues"
dev-repo:     "git+https://github.com/mirage/irmin.git"
doc:          "https://mirage.github.io/irmin/"

build: [
 ["dune" "subst"] {dev}
 ["dune" "build" "-p" name "-j" jobs]
 ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

depends: [
  "ocaml"          {>= "4.03.0"}
  "dune"           {>= "2.7.0"}
  "irmin"          {= version}
  "graphql"        {>= "0.13.0"}
  "graphql-lwt"    {>= "0.13.0"}
  "graphql-cohttp" {>= "0.13.0"}
  "graphql_parser" {>= "0.13.0"}
  "cohttp-lwt"
  "cohttp"
  "fmt"
  "lwt"            {>= "5.3.0"}
  "alcotest-lwt"    {with-test & >= "1.1.0"}
  "yojson"          {with-test}
  "cohttp-lwt-unix" {with-test}
  "alcotest"        {with-test & >= "1.2.3"}
  "logs"            {with-test}
]


synopsis: "GraphQL server for Irmin"
