opam-version: "2.0"
maintainer:   "Andreas Garnaes <andreas.garnaes@gmail.com>"
authors:      "Andreas Garnaes <andreas.garnaes@gmail.com>"
license:      "ISC"
homepage:     "https://github.com/mirage/irmin"
bug-reports:  "https://github.com/mirage/irmin/issues"
dev-repo:     "git+https://github.com/mirage/irmin.git"
doc:          "https://mirage.github.io/irmin/"

build: [
 ["dune" "subst"] {dev}
 ["dune" "build" "-p" name "-j" jobs]
 ["dune" "runtest" "-p" name "-j" jobs] {with-test & os != "macos"}
]

depends: [
  "ocaml"          {>= "4.03.0"}
  "dune"           {>= "2.9.0"}
  "irmin"          {= version}
  "graphql"        {>= "0.14.0"}
  "graphql-lwt"    {>= "0.14.0"}
  "graphql-cohttp" {>= "0.14.0"}
  "graphql_parser" {>= "0.14.0"}
  "cohttp"
  "cohttp-lwt"
  "cohttp-lwt-unix"
  "git-unix"        {>= "3.7.0"}
  "fmt"
  "lwt"             {>= "5.3.0"}
  "lwt_eio"         {>= "0.3"}
  "yojson"          {with-test}
  "alcotest"        {with-test & >= "1.2.3"}
  "logs"            {with-test}
]

synopsis: "GraphQL server for Irmin"
