opam-version: "2.0"
maintainer:   "thomas@gazagnaire.org"
authors:      ["Thomas Gazagnaire" "Thomas Leonard"]
license:      "ISC"
homepage:     "https://github.com/mirage/irmin"
bug-reports:  "https://github.com/mirage/irmin/issues"
dev-repo:     "git+https://github.com/mirage/irmin.git"
doc:          "https://mirage.github.io/irmin/"

build: [
 ["dune" "subst"] {pinned}
 ["dune" "build" "-p" name "-j" jobs]
 ["dune" "runtest" "-p" name] {with-test}
]

depends: [
  "ocaml"      {>= "4.02.3"}
  "dune"       {>= "1.8.0"}
  "crunch"     {>= "2.2.0"}
  "webmachine" {>= "0.6.0"}
  "irmin"      {>= "2.2.0"}
  "cohttp-lwt" {>= "1.0.0"}
  "irmin-git"  {with-test & >= "2.0.0"}
  "irmin-mem"  {with-test & >= "2.0.0"}
  "irmin-test" {with-test & >= "2.0.0"}
  "git-unix"   {with-test}
  "digestif"   {with-test & >= "0.6.1"}
]

synopsis: "HTTP client and server for Irmin"
