opam-version: "2.0"
maintainer:   "thomas@gazagnaire.org"
authors:      ["Thomas Gazagnaire" "Thomas Leonard"]
license:      "ISC"
homepage:     "https://github.com/mirage/irmin"
bug-reports:  "https://github.com/mirage/irmin/issues"
dev-repo:     "git+https://github.com/mirage/irmin.git"
doc:          "https://mirage.github.io/irmin/"

build: [
 ["dune" "subst"] {dev}
 ["dune" "build" "-p" name "-j" jobs]
 ["dune" "runtest" "-p" name "-j" jobs] {with-test & os != "macos"}
]

depends: [
  "ocaml"           {>= "4.02.3"}
  "dune"            {>= "2.9.0"}
  "crunch"          {>= "2.2.0"}
  "webmachine"      {>= "0.6.0"}
  "irmin"           {= version}
  "ppx_irmin"       {= version}
  "cohttp-lwt"      {>= "1.0.0"}
  "cohttp-lwt-unix" {>= "1.0.0"}
  "astring"
  "cohttp"
  "fmt"
  "jsonm"
  "logs"
  "lwt"             {>= "5.3.0"}
  "lwt_eio"         {>= "0.3"}
  "uri"
  "irmin-git"       {with-test & = version}
  "irmin-fs"        {with-test & = version}
  "irmin-test"      {with-test & = version}
  "git-unix"        {with-test & >= "3.5.0"}
  "digestif"        {with-test & >= "0.9.0"}
]

synopsis: "HTTP client and server for Irmin"
