opam-version: "1.2"
maintainer:   "thomas@gazagnaire.org"
authors:      ["Thomas Gazagnaire" "Thomas Leonard"]
license:      "ISC"
homepage:     "https://github.com/mirage/irmin"
bug-reports:  "https://github.com/mirage/irmin/issues"
dev-repo:     "https://github.com/mirage/irmin.git"
doc:          "https://mirage.github.io/irmin/"

build: ["jbuilder" "build" "-p" name "-j" jobs]
build-test: ["jbuilder" "runtest" "test/irmin-mem"]

depends: [
  "jbuilder" {build}
  "irmin"    {>= "1.2.0"}
  "alcotest" {test}
  "mtime"    {test & >= "1.0.0"}
]
available: [ocaml-version >= "4.03.0"]
