opam-version: "2.0"
maintainer:   "thomas@gazagnaire.org"
authors:      "Thomas Gazagnaire"
license:      "ISC"
homepage:     "https://github.com/mirage/irmin"
bug-reports:  "https://github.com/mirage/irmin/issues"
dev-repo:     "git+https://github.com/mirage/irmin.git"
doc:          "https://mirage.github.io/irmin/"

build: [
 ["dune" "subst"] {dev}
 ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "dune"         {>= "2.7.0"}
  "irmin-mirage" {= version}
  "irmin-git"    {= version}
  "mirage-kv"    {>= "3.0.0"}
  "git-paf"      {>= "3.5.0"}
  "fmt"
  "git"          {>= "3.5.0"}
  "lwt"          {>= "5.3.0"}
  "mirage-clock"
  "uri"
]

synopsis: "MirageOS-compatible Irmin stores"
