opam-version: "2.0"
maintainer:   "thomas@gazagnaire.org"
authors:      "Thomas Gazagnaire"
license:      "ISC"
homepage:     "https://github.com/mirage/irmin"
bug-reports:  "https://github.com/mirage/irmin/issues"
dev-repo:     "git+https://github.com/mirage/irmin.git"
doc:          "https://mirage.github.io/irmin/"

build: [
 ["dune" "subst"] {pinned}
 ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "dune"          {>= "2.7.0"}
  "irmin-mirage"  {= version}
  "irmin-graphql" {= version}
  "mirage-clock"
  "cohttp-lwt"
  "lwt"
  "uri"
  "git-nss"
]

synopsis: "MirageOS-compatible Irmin stores"

pin-depends: [
  [ "git-nss.dev" "git+https://github.com/mirage/ocaml-git.git#b8a1d07147cbc8d5f8a563055b84fd166da9d0a0" ]
]
