opam-version: "2.0"
maintainer:   "thomas@gazagnaire.org"
authors:      "Thomas Gazagnaire"
license:      "ISC"
homepage:     "https://github.com/mirage/irmin"
bug-reports:  "https://github.com/mirage/irmin/issues"
dev-repo:     "git+https://github.com/mirage/irmin.git"
doc:          "https://mirage.github.io/irmin/"

build: [
 ["dune" "subst"] {dev}
 ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "dune"          {>= "2.7.0"}
  "irmin-mirage"  {= version}
  "irmin-graphql" {= version}
  "mirage-clock"
  "cohttp-lwt"
  "lwt"
  "uri"
  "git"           {>= "3.4.0"}
]

synopsis: "MirageOS-compatible Irmin stores"

pin-depends: [
  [ "git.3.4.0" "git+https://github.com/mirage/ocaml-git.git#5eb3ef686b101102b40967ef45e76f44cd55e149" ]
]
