opam-version: "2.0"
maintainer:   "thomas@gazagnaire.org"
authors:      "Thomas Gazagnaire"
license:      "ISC"
homepage:     "https://github.com/mirage/irmin"
bug-reports:  "https://github.com/mirage/irmin/issues"
dev-repo:     "git+https://github.com/mirage/irmin.git"
doc:          "https://mirage.github.io/irmin/"

build: [
 ["dune" "subst"] {pinned}
 ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "dune"       {build & >= "1.1.0"}
  "irmin"      {>= "1.3.0"}
  "irmin-git"  {>= "1.3.0"}
  "irmin-mem"  {>= "1.3.0"}
  "irmin-graphql"
  "git-mirage" {>= "1.11.4"}
  "ptime"
  "mirage-kv-lwt" {>= "2.0.0"}
  "mirage-clock"
  "mirage-clock-lwt"
]

synopsis: "MirageOS-compatible Irmin stores"
