opam-version: "2.0"
maintainer:   "thomas@gazagnaire.org"
authors:      "Thomas Gazagnaire"
license:      "ISC"
homepage:     "https://github.com/mirage/irmin"
bug-reports:  "https://github.com/mirage/irmin/issues"
dev-repo:     "git+https://github.com/mirage/irmin.git"
doc:          "https://mirage.github.io/irmin/"

build: [
 ["dune" "subst"] {pinned}
 ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "dune"       {>= "1.8.0"}
  "irmin"      {>= "2.0.0"}
  "irmin-mem"  {>= "2.0.0"}
  "ptime"
  "mirage-clock" {>= "3.0.0"}
]

synopsis: "MirageOS-compatible Irmin stores"
