opam-version: "2.0"
maintainer:   "Gwenaelle@tarides.com"
authors:      ["Gwenaëlle Lecat"]
license:      "ISC"
homepage:     "https://github.com/mirage/irmin"
bug-reports:  "https://github.com/mirage/irmin/issues"
dev-repo:     "git+https://github.com/mirage/irmin.git"
doc:          "https://mirage.github.io/irmin/"

build: [
 ["dune" "subst"] {dev}
 ["dune" "build" "-p" name "-j" jobs]
 ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

available: arch != "arm32" & arch != "x86_32"

depends: [
  "ocaml"       {>= "4.01.0"}
  "dune"        {>= "2.9.0"}
  "irmin-tezos" {= version}
  "irmin-pack"  {= version}
  "irmin-pack"  {= version}
  "cmdliner"    {>= "1.1.0"}
  "cmdliner"    {>= "1.1.0"}
  "notty"       {>= "0.2.3"}
  "index"       {>= "dev"}
  "ppx_repr"    {>= "0.6.0"}
  "ptime"
  "hex"
  "irmin-test"  {with-test & = version}
  "alcotest"    {with-test}
]

pin-depends: [
  # Needed by Index
  [ "terminal.dev" "git+https://github.com/craigfe/progress#76e7c791bd17c28b3e605d9c383102a30345e029" ]
  [ "progress.dev" "git+https://github.com/craigfe/progress#76e7c791bd17c28b3e605d9c383102a30345e029" ]
  # Needed by Irmin-pack
  [ "index.dev" "git+https://github.com/patricoferris/index#cfa32e984b633d08b2f0c1fc1f792925c6d74f8e" ]
]

synopsis: "Utils for Irmin-pack"
description: """
`Irmin-pack-tools` defines useful binaries and libraries for
an internal use of irmin-pack, like dumping control files in
a readable json format and such.
"""
