opam-version: "2.0"
maintainer:   "Gwenaelle@tarides.com"
authors:      ["Gwenaëlle Lecat"]
license:      "ISC"
homepage:     "https://github.com/mirage/irmin"
bug-reports:  "https://github.com/mirage/irmin/issues"
dev-repo:     "git+https://github.com/mirage/irmin.git"
doc:          "https://mirage.github.io/irmin/"

build: [
 ["dune" "subst"] {dev}
 ["dune" "build" "-p" name "-j" jobs]
 ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

available: arch != "arm32" & arch != "x86_32"

depends: [
  "ocaml"       {>= "4.01.0"}
  "dune"        {>= "3.5.0"}
  "irmin-tezos" {= version}
  "irmin-pack"  {= version}
  "irmin-pack"  {= version}
  "index"       {>= "1.6.2"}
  "cmdliner"    {>= "1.1.0"}
  "cmdliner"    {>= "1.1.0"}
  "notty"       {>= "0.2.3"}
  "index"       {>= "dev"}
  "ppx_repr"    {>= "0.7.0"}
  "ptime"
  "hex"
  "irmin-test"  {with-test & = version}
  "alcotest"    {with-test}
]

synopsis: "Utils for Irmin-pack"
description: """
`Irmin-pack-tools` defines useful binaries and libraries for
an internal use of irmin-pack, like dumping control files in
a readable json format and such.
"""
