opam-version: "2.0"
maintainer:   "thomas@gazagnaire.org"
authors:      ["Thomas Gazagnaire"]
license:      "ISC"
homepage:     "https://github.com/mirage/irmin"
bug-reports:  "https://github.com/mirage/irmin/issues"
dev-repo:     "git+https://github.com/mirage/irmin.git"

build: [
 ["dune" "subst"] {dev}
 ["dune" "build" "-p" name "-j" jobs]
 ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

depends: [
  "ocaml"        {>= "4.12.0"}
  "dune"         {>= "3.5.0"}
  "irmin"        {= version}
  "ppx_irmin"    {= version}
  "index"        {= "dev"}
  "fmt"
  "logs"
  "eio"          {>= "0.15"}
  "mtime"        {>= "2.0.0"}
  "cmdliner"
  "optint"       {>= "0.1.0"}
  "checkseum"
  "rusage"
  "progress"     {= "dev"}
  "irmin-test"   {with-test & = version}
  "astring"      {with-test}
  "alcotest"     {with-test}
]

pin-depends: [
  [ "terminal.dev" "git+https://github.com/craigfe/progress#ac53cd48cd82500f51faf67f9555a9454d5f5504" ]
  [ "progress.dev" "git+https://github.com/craigfe/progress#ac53cd48cd82500f51faf67f9555a9454d5f5504" ]
  [ "index.dev"    "git+https://github.com/mirage/index#09ab315dcfe6c1affbbb01c737f1b8e235b04eca"     ]
]

synopsis: "Irmin backend which stores values in a pack file"
