opam-version: "2.0"
maintainer:   "thomas@gazagnaire.org"
authors:      ["Thomas Gazagnaire"]
license:      "ISC"
homepage:     "https://github.com/mirage/irmin"
bug-reports:  "https://github.com/mirage/irmin/issues"
dev-repo:     "git+https://github.com/mirage/irmin.git"

build: [
 ["dune" "subst"] {dev}
 ["dune" "build" "-p" name "-j" jobs]
 ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

depends: [
  "ocaml"        {>= "4.12.0"}
  "dune"         {>= "2.9.0"}
  "irmin"        {= version}
  "ppx_irmin"    {= version}
  "index"        {>= "1.6.0"}
  "fmt"
  "logs"
  "lwt"          {>= "5.4.0"}
  "mtime"        {>= "2.0.0"}
  "cmdliner"     {>= "1.3.0"}
  "optint"       {>= "0.1.0"}
  "checkseum"
  "rusage"
  "irmin-test"   {with-test & = version}
  "alcotest-lwt" {with-test}
  "astring"      {with-test}
  "alcotest"     {with-test}
]

synopsis: "Irmin backend which stores values in a pack file"
x-maintenance-intent: [ "(latest)" ]
